[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/rock.png" type="Texture" id=1]
[ext_resource path="res://scripts/Rock.gd" type="Script" id=2]
[ext_resource path="res://sfx/scissors.mp3" type="AudioStream" id=3]
[ext_resource path="res://sfx/paper.mp3" type="AudioStream" id=4]
[ext_resource path="res://sfx/stone.mp3" type="AudioStream" id=5]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform float outline_width = 2.0;
uniform vec4 outline_color: hint_color;

void fragment() {
	vec4 col = texture(TEXTURE, UV);
	vec2 ps = TEXTURE_PIXEL_SIZE;
	float a;
	float maxa = col.a;
	float mina = col.a;

	a = texture(TEXTURE, UV + vec2(0.0, -outline_width) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	a = texture(TEXTURE, UV + vec2(0.0, outline_width) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	a = texture(TEXTURE, UV + vec2(-outline_width, 0.0) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	a = texture(TEXTURE, UV + vec2(outline_width, 0.0) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	COLOR = mix(col, outline_color, maxa - mina);
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/outline_width = 2.0
shader_param/outline_color = null

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.5, 17 )

[node name="Rock" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Area2D"]
material = SubResource( 3 )
position = Vector2( -7.15256e-07, -7.15256e-07 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.500001, 0.999999 )
shape = SubResource( 1 )

[node name="RockSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="PaperSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="ScissorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.499999, 1 )
scale = Vector2( 1.75, 1.7 )

[node name="Label" type="Label" parent="."]
margin_left = -24.0
margin_top = -32.0
margin_right = 24.0
margin_bottom = -16.0
align = 1
valign = 1
uppercase = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.500001, 0.999999 )
shape = SubResource( 1 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
